add background image

--- a/AcakKata/statics/css/home.css
+++ b/AcakKata/statics/css/home.css
@@ -1,16 +1,20 @@
 body {
     margin: 0px;
+    background-image: url(../img/background.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 #main h1 {
-    color: #179E63;
+    color: #ffffff;
     font-size: 4em;
-    margin: 33px 0px;
+    margin-top: 100px;
+    text-align: center;
 }
 
 #main h2 {
     color: #f26600;
-    font-size: 2.4em;
+    /*font-size: 2.4em;*/
     margin: 25px;
     margin-bottom: 10px;
 }
@@ -82,683 +86,4 @@ body {
 
 .btn-primary:focus {
     outline: none;
-}
-
-div.profile {
-    width: 100%;
-    background: #00374c;
-    height: 100px;
-    margin: 0px;
-}
-
-div.profile > img {
-    height: 80%;
-    cursor: pointer;
-    display: flex;
-    float: right;
-    padding-top: 20px;
-    padding-right: 20px;
-}
-
-#profile {
-    display: inline-block;
-    width: 100%;
-    background: #00374c;
-    height: 10%;
-}
-
-#edit-profile {
-    height: 100%;
-    cursor: pointer;
-}
-
-div.profile-pic {
-    background-color: #00374c;
-}
-
-div.profile-pic > img {
-    object-fit: cover;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height: 160px;
-    width: 160px;
-    border-radius: 50%;
-    border-style: solid;
-    border-width: thick;
-    border-color: yellow;
-}
-
-#edit-picture {
-    height: 100px;
-    width: 100px;
-    border-style: solid;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-#edit-picture > img {
-    max-width:100%;
-    max-height:100%;    
-    object-fit: scale-down;
-}
-
-#profile-picture > img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height: 20%;
-    width: 10%;
-    border-radius: 50%;
-    border-style: solid;
-    border-width: thick;
-    border-color: yellow;
-}
-
-#edit-profile {
-    display: flex;
-    float: right;
-    padding-top: 20px;
-    padding-right: 20px;
-}
-
-span.name {
-    display: inline-block;
-    width: 100%;
-    height: 20px;
-    padding-bottom: 50px;
-    font-size: 2.5em;
-    color: #ffffff;
-    text-align: center;
-    background-color: #00374c;
-    vertical-align: 50px;       
-}
-
-table.profile {
-    margin-left: auto;
-    margin-right: auto;
-    width: 60%;
-    height: 20px;
-    padding: 5px;
-    font-size: 1.2em;   
-}
-
-table.profile td.icon {
-    width: 7%;
-    height: 20px;
-}
-
-table.profile td.icon > img {
-    float: right;
-    margin-right: 10px;
-    height: 100%;
-}
-
-table.profile td.profiletitle {
-    width: 20%;
-    height: 20px;
-    padding: 5px;
-}
-
-table.profile td.title {
-    width: 20%;
-    height: 20px;
-    padding: 5px;
-}
-
-table.profile td.profiledata {
-    width: 60%;
-}
-
-table.profile > caption {
-    text-align: left;
-    font-weight: bold;
-    color: #f26600;
-    font-size: 2em;
-    margin: 25px;
-    margin-top: 0px;
-    margin-left: 0px;
-    margin-bottom: 10px;
-}
-
-#cover {
-    width: 150px;
-    height: 150px;
-    border-style: solid;
-}
-
-figure {
-    float: right;
-    vertical-align: top;
-    text-align: center;
-    width: 150px;
-}
-
-figure > img {
-    object-fit: contain;
-}
-
-figure > img#starrating {
-    display: inline-block;
-    width: 100%;
-}
-
-figure.caption {
-    display: block;
-}
-
-figcaption.caption {
-    font-weight: bold;
-}
-
-div.order {
-    margin-left: 33px;
-    margin-top: 33px;
-}
-
-div.review {
-    margin-left: 33px;
-    margin-top: 33px;
-}
-
-span.subheading {
-    display: block;
-    color: #00374c;
-    font-size: 2.5em;
-    font-weight: bold;
-    margin-bottom: 0px;
-}
-
-span.author {
-    font-size: 1.2em; 
-    font-weight: bold; 
-    margin: 33px; 
-    margin-top: 0; 
-}
-
-.flex-container{
-    display: flex;
-}
-
-#back-button{
-    color:red;
-    border-width:1px;
-    background-color: white;
-    border-radius: 4px;
-    border-style:solid;
-    border-color: red;
-}
-
-.blue-button {
-    color:white;
-    background-color: #179E63;
-    border-radius:4px;
-    border-width: 0px;
-}
-
-.blue-button:hover {
-    background-color: #f26600;
-    cursor: pointer;
-}
-
-button {
-    padding: 10px 20px;
-}
-
-
-.input-fields {
-    text-align: left; 
-    margin-right: 30px;
-}
-
-.input-value {
-    width: 50%; 
-    display: flex;
-}
-
-.input-value-table {
-    width:100%;
-    margin-left: 10px;
-}
-
-.input-fields-table {
-    text-align: left;
-    margin-right: 30px;
-}
-
-.input-group {
-    display: flex;
-    margin-bottom: 14px;
-    font-size: 1.25em;
-}
-
-.right-button{
-    float:right;
-    font-weight: bold; 
-    margin-left: 220px; 
-    margin-top: 0;
-}
-
-span.detail {
-    display: block;
-    width: 70%;
-    font-size: 1.3em;
-    margin: 22px;
-    margin-left: 33px
-}
-
-span.jumlah {
-    display: inline-block;
-    font-weight: bold;
-    margin-left: 5px;
-    margin-top: 10px;
-}
-
-#btn-order {
-    display: block;
-    float: right;
-    margin: 40px;
-    border-style: solid;
-}
-
-table.reviews {
-    table-layout:fixed;
-    width: 100%;
-    margin-bottom: 3%;
-}
-
-td.profile_picture {
-    width: 85px;
-    height: 85px;
-}
-
-td.profile_picture > img {
-    object-fit: cover;
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-    border-style: solid;
-}
-
-td.comments {
-    display: inline-block;
-    width: 100%;
-    margin-top: 0;
-    margin-right: 0;
-}
-
-td.comments > span.username {
-    font-size: 1.5em;
-    font-weight: bold;
-    color: #4d4d4d;
-    margin-left: 2%;
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
-td.comments > span.comment {
-    display: block;
-    margin-left: 2%;
-    margin-top: 0;
-}
-
-td.ratings {
-    width: 7%;
-    margin-left: 0;
-}
-
-figure.reviewrating {
-    display: inline-block;
-    margin-left: 0;
-    text-align: center;
-    width: 100%;
-    font-weight: bold;
-    margin-right: 33px;
-}
-
-figure.reviewrating > img {
-    width: 50%;
-    margin-left: 0;
-}
-
-#profile-picture{
-    width:100px;
-    height:100px;
-    border:1px;
-}
-
-#update-profile-picture{
-    margin-left: 10px;
-}
-
-.inputfile{
-    display: inline-block;
-}
-
-#inputfileprofpic{
-    display: none;
-}
-
-.title {
-    color: #f26600;
-    font-size: 1.5em;
-    margin: 19px;
-    margin-bottom: 5px;
-}
-
-span.searchresult {
-    display: inline-block;
-    margin: 33px;
-    font-size: 4em;
-    font-weight: bold;
-    color: #f26600;
-}
-
-span.numberofresult {
-    display: inline-block;
-    font-size: 1.5em;
-    color: #4c4c4c;
-}
-
-span.numberofresult > p {
-    display: inline-block;
-    font-weight: bold;
-    text-decoration: underline;
-}
-
-table.results {
-    table-layout:fixed;
-    width: 100%;
-    margin-bottom: 3%;
-    margin-left: 33px;
-}
-
-td.cover {
-    width: 150px;
-    height: 150px;
-}
-
-td.cover > img {
-    object-fit: contain;
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-    border-style: solid;
-}
-
-table.results td.about {
-    display: inline-block;
-    width: 94%;
-    margin-top: 0;
-}
-
-td.about > p.title {
-    display: inline-block;
-    margin: 0px 30px;
-    font-size: 2em;
-    font-weight: bold;
-    color: #f26600;
-}
-
-td.about > p.author {
-    margin: 0px 30px;
-    font-weight: bold;
-    color: #4c4c4c;
-}
-
-td.about > p.detail {
-    margin: 0px 30px;
-    color: #4c4c4c;
-}
-
-#btn-detail {
-    float: right;
-    margin-right: 40px;
-}
-
-table.ahistorybook {
-    margin-top: 20px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-table.ahistorybook > caption {
-    text-align: left;
-    font-weight: bold;
-    color: #f26600;
-    font-size: 4em;
-    margin-bottom: 20px;
-}
-
-#nonedisplay{
-    display:inline-block;
-    display: none;
-}
-
-.inlinedisplay{
-    display:inline;
-}
-
-#booktitle {
-    color: #f26600;
-    font-size: 1.1em;
-    font-weight: bold;
-    margin-bottom: 8px;
-}
-
-#historybook{
-    width:100;
-    height:100;
-}
-
-#user-address{
-    height:200;
-}
-
-.bookimage {
-    border: 1px solid;
-    height: 100px;
-    width: 100px;
-    text-align: center;
-}
-
-.historybook{
-    max-height: 100px;
-    width:auto;
-}
-
-.ml{
-    margin-left:40px;
-}
-
-.ml-40{
-    margin-left:40px;
-}
-.ml-20{
-    margin-left:20px;
-}
-.ml-10{
-    margin-left:10px;
-}
-
-.ml-60{
-    margin-left:60px;
-}
-
-.mb-10{
-    margin-bottom: 10px;
-}
-
-.mt-20{
-    margin-top:20px;
-}
-
-.right-pos{
-    float:right;
-}
-
-.orderinfo{
-    font-weight:bold;
-    text-align: right;
-}
-
-#author {
-    margin-left: 25px;
-    font-weight: bold;
-    font-size:50%;
-}
-
-.bookreview{
-    max-height: 100px;
-    width:auto;
-}
-
-.inputreview{
-    width:330px;
-    margin-top:10px;
-    margin-bottom: 10px;
-}
-
-div.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    padding-top: 19%;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
-}
-
-div.modalcontent {
-    background-color: #ffffff;
-    margin: auto;
-    padding: 5px;
-    border: 1px solid #888;
-    width: 30%;
-}
-
-span.close {
-    padding: 2px;
-    color: #585858;
-    float: right;
-    cursor: pointer;
-}
-
-table.contentbox {
-    width: 100%;
-}
-
-td.checkmark {
-    display: inline-block;
-    width: 100px;
-    height: 100px;
-    margin-left: 10%;
-    margin-right: 0px;
-}
-
-td.insidecontent {
-    margin-left: 0px;
-}
-
-td.insidecontent > p#pesan {
-    font-weight: bold;
-    margin-bottom: 0;
-    margin-left: 0px;
-}
-
-td.insidecontent > p#transaksi {
-    display: inline-block;
-    margin-top: 0;
-    margin-left: 0px;
-    width: 55%;
-}
-
-td.insidecontent > p#nomortransaksi {
-    display: inline-block;
-    margin-top: 0;
-}
-
-td.checkmark > img {
-    display: inline-block;
-    width: 80%;
-}
-
-.nunitofont{
-    font-family: 'Nunito', sans-serif;
-}
-
-#editProfileSubmit{
-    display: none;
-}
-
-.red-font{
-    color:red;
-}
-
-.subjudul{
-    color:#0E2D6B;
-    font-weight: bold;
-    font-size:25px;
-}
-
-.blank-space {
-    height: 20px;
-}
-
-#review-header {
-    margin-top: 40px;
-    display: flex; 
-    margin-bottom: 50px;
-}
-
-#review-header #header-left {
-    width: 80%;
-}
-
-#review-header #header-left * {
-    margin: 0px;
-}
-
-#review-header #header-left #author {
-    font-size: 12px; 
-    font-weight: normal; 
-    font-weight:bold;
-}
-
-#review-header #header-right {
-    width: 20%;
-    display: flex; 
-    align-items: center; 
-    justify-content: center; 
-}
-
-.inline-star {
-    display: inline
-}
-
-.inline-star img {
-    width: 40px;
-}
-
-#star-wrapper {
-    text-align: center; 
-    margin-bottom: 30px;
-}
-
-#inputcomment {
-    width: 100%; 
-    box-sizing: border-box;
-}
-
-#submit-review {
-    float: right;
-}
-
-.caption {
-    font-weight: bold;
 }
