--- a/AcakKata/statics/css/home.css
+++ b/AcakKata/statics/css/home.css
@@ -1,5 +1,6 @@
 body {
     margin: 0px;
+    height: 100vh;
     background-image: url(../img/background.jpg);
     background-size: cover;
     background-repeat: no-repeat;
