--- a/AcakKata/statics/css/home.css
+++ b/AcakKata/statics/css/home.css
@@ -49,16 +49,19 @@ body {
     padding: 8px;
     font-size: 1.125em;
     box-sizing: border-box;
+    opacity: 0.3;
 }
 
 #input-word:focus {
     outline: none;
     border: 1.5px solid #f26600;
     border-radius: 4px; 
+    opacity: 0.4;
 }
 
 #input-word::placeholder {
-    color: grey;
+    color: black;
+    opacity: unset;
 }
 
 #box-input > #failure-notif {
